--- a/meta-source/debian/changelog
+++ b/meta-source/debian/changelog
@@ -1,3 +1,9 @@
+linux-meta (4.6.0.8.3) yakkety; urgency=low
+
+  * linux ABI 4.6.0-8
+
+ -- Leann Ogasawara <leann.ogasawara@canonical.com>  Fri, 01 Jul 2016 10:48:32 -0700
+
 linux-meta (4.6.0.7.2) yakkety; urgency=medium
 
   * linux ABI 4.6.0-7
