--- a/meta-source/debian/changelog
+++ b/meta-source/debian/changelog
@@ -1,3 +1,9 @@
+linux-meta (4.6.0.9.4) yakkety; urgency=low
+
+  * linux ABI 4.6.0-9
+
+ -- Leann Ogasawara <leann.ogasawara@canonical.com>  Wed, 13 Jul 2016 14:32:37 -0700
+
 linux-meta (4.6.0.8.3) yakkety; urgency=low
 
   * linux ABI 4.6.0-8
