--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+linux-meta (4.16.0.2.3) bionic; urgency=medium
+
+  * Bump ABI 4.16.0-2
+
+ -- Seth Forshee <seth.forshee@canonical.com>  Mon, 19 Mar 2018 14:39:34 -0500
+
 linux-meta (4.16.0.1.2) bionic; urgency=medium
 
   * Bump ABI 4.16.0-1
