--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+linux-meta (5.4.0.6.7) focal; urgency=medium
+
+  * Bump ABI 5.4.0-6
+
+ -- Andrea Righi <andrea.righi@canonical.com>  Mon, 18 Nov 2019 14:55:51 +0100
+
 linux-meta (5.4.0.5.6) focal; urgency=medium
 
   * Bump ABI 5.4.0-5
