--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+linux-meta (5.4.0.7.8) focal; urgency=medium
+
+  * Bump ABI 5.4.0-7
+
+ -- Andrea Righi <andrea.righi@canonical.com>  Mon, 25 Nov 2019 16:39:33 +0100
+
 linux-meta (5.4.0.6.7) focal; urgency=medium
 
   * Bump ABI 5.4.0-6
