--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+linux-meta (5.5.0.1.10) focal; urgency=medium
+
+  * Bump ABI 5.5.0-1
+
+ -- Andrea Righi <andrea.righi@canonical.com>  Thu, 12 Dec 2019 17:04:03 +0100
+
 linux-meta (5.4.0.8.9) focal; urgency=medium
 
   * Bump ABI 5.4.0-8
