--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+linux-meta-unstable (6.4.0.1.1) mantic; urgency=medium
+
+  * Bump ABI 6.4.0-1
+
+ -- Andrea Righi <andrea.righi@canonical.com>  Thu, 18 May 2023 08:13:03 +0200
+
 linux-meta-unstable (6.4.0.0.0) mantic; urgency=medium
 
   * Empty entry
