--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+linux-meta-unstable (6.4.0.3.3) mantic; urgency=medium
+
+  * Bump ABI 6.4.0-3
+
+  * Packaging resync (LP: #1786013)
+    - [Packaging] resync git-ubuntu-log
+
+ -- Andrea Righi <andrea.righi@canonical.com>  Tue, 30 May 2023 11:15:26 +0200
+
 linux-meta-unstable (6.4.0.2.2) mantic; urgency=medium
 
   * Bump ABI 6.4.0-2
