--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+linux-meta-unstable (6.4.0.4.4) mantic; urgency=medium
+
+  * Bump ABI 6.4.0-4
+
+ -- Andrea Righi <andrea.righi@canonical.com>  Tue, 30 May 2023 12:04:33 +0200
+
 linux-meta-unstable (6.4.0.3.3) mantic; urgency=medium
 
   * Bump ABI 6.4.0-3
